syntax = "proto3";
package go.escape.ship.proto.productapi;

import "google/api/annotations.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/escape-ship/productsrv/proto/gen";

// 카테고리 정보
message Category {
    string name = 1;
}

// 상품 정보
message Product {
    string id = 1;
    string name = 2;
    repeated Category categories = 3;
    int64 price = 4;
    string image_url = 5;
    string created_at = 6;
    string updated_at = 7;
}

// 전체 상품 목록 요청 (필터 없음)
message GetProductsRequest {}

message GetProductsResponse {
    repeated Product products = 1;
}

// 이름으로 상품 조회 요청
message GetProductByIDRequest {
    string id = 1;
}

message GetProductByIDResponse {
    Product product = 1;
}

// 상품 추가 요청
message PostProductRequest {
    string name = 1;
    repeated string categories = 2;
    int64 price = 3;
    string image_url = 4;
}

message PostProductResponse {
    string message = 1;
}
service ProductService {
    rpc GetProducts(GetProductsRequest) returns (GetProductsResponse) {
        option (google.api.http) = {
            get: "/products"
        };
    }
    rpc GetProductByID(GetProductByIDRequest) returns (GetProductByIDResponse) {
        option (google.api.http) = {
            get: "/products/{id}"
        };
    }
    rpc PostProducts(PostProductRequest) returns (PostProductResponse) {
        option (google.api.http) = {
            post: "/products"
            body: "*"
        };
    }
}